--- a/Turistearg/src/main/resources/application.yml
+++ b/Turistearg/src/main/resources/application.yml
@@ -1,10 +1,23 @@
 spring:
+  
+  mail: 
+    host: smtp.gmail.com
+    port: 587
+    properties:
+        mail:
+            smtp:              
+                auth: true
+                starttls:
+                    required: true
+                    enable: true
+    username: grupo2egg@gmail.com
+    password: bheqdtwkwmlanxzw
 
   datasource:
     url: jdbc:mysql://localhost:3306/turistearg?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
     password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver 
+    driver-class-name: com.mysql.cj.jdbc.Driver
       
   jpa:    
     show-sql: false
