Terminando Recuperar Contraseña
- Creamos la entidad, el repositorio y la vista para recuperar la contraseña
-Hicimos que funcionaran los tokens para recuperar la contraseña
-Correcciones en vistas y
-Modificaciones en UsuarioServicios y mainController.
-Configuramos el tamaño de imagen en el yml

--- a/Turistearg/src/main/resources/application.yml
+++ b/Turistearg/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
     username: grupo2egg@gmail.com
     password: bheqdtwkwmlanxzw
 
+  servlet:
+      multipart:
+        max-request-size: 10000KB
+        max-file-size: 10000KB
+
   datasource:
     url: jdbc:mysql://localhost:3306/turistearg?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
